# DutyBoard

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  alembic.ini  docker-compose.dev.yaml  docker-compose.prod.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: deploy-pypi.yml  validate.yml
docker-compose/: docker-compose.dev.yaml  docker-compose.prod.yaml  python.Dockerfile
duty_board/: __init__.py  __main__.py  alembic.ini  exceptions.py  generate_typescript_api.py  main.py  server.py  worker_calendars.py  worker_duty_officer.py  worker_duty_watcher.py  worker_loop.py
duty_board/alchemy/: add_sqladmin.py  api_queries.py  queries.py  session.py  settings.py  sqlalchemy_types.py  update_duty_calendars.py
duty_board/alembic/: README.md  env.py
duty_board/alembic/versions/: 2023_11_19_1341-25f00fd34f6a_add_intial_tables.py  2023_11_27_1202-2df94475917e_store_image_in_db.py  2023_11_27_1745-eb3f7ef76164_add_double_not_null_issue.py  2023_11_28_1113-9af1232f6bc0_initial_version.py  2024_08_31_1220-2e1f3badfabe_add_field_to_contain_extra_information_.py
duty_board/alembic/versions-abc/: 2023_11_27_1532-e16bfce2c936_initial_version.py
duty_board/models/: calendar.py  generate_fake_data.py  on_call_event.py  person.py  person_image.py  token.py
duty_board/plugin/: abstract_plugin.py  ical_plugin_mixin.py  ldap_plugin_mixin.py
duty_board/plugin/example/: example_plugin.py
duty_board/plugin/helpers/: duty_calendar_config.py  ldap_helper.py  plugin_fetcher.py
duty_board/web_helpers/: generate_typescript_api.py  gzip_static_files.py  response_types.py
duty_board/www/: .dockerignore  .env.development  .env.production  .eslintrc.json  README.md  index.html  package-lock.json  package.json  vite.config.ts  webpack.common.js  webpack.dev.js  webpack.prod.js
duty_board/www/js/: App.css  App.tsx  index.tsx
duty_board/www/js/api/: api-generated-types.ts  index.ts  useGetPerson.ts  useGetSchedule.ts
duty_board/www/js/components/: announcementBar.tsx  companyLogo.tsx  expandedCalendarInfo.tsx  externalLink.tsx  footer.tsx  navbar.tsx  parsingWarning.tsx  personComponent.tsx  personLazyLoading.tsx  schedule.tsx  singleCalendar.tsx
duty_board/www/templates/: index.html
duty_overview/: __init__.py  generate_typescript_api.py  main.py  response_types.py  server.py  worker_loop.py
duty_overview/alchemy/: add_sqladmin.py  queries.py  session.py  settings.py  sqlalchemy_types.py
duty_overview/models/: calendar.py  generate_fake_data.py  on_call_event.py  person.py  token.py
duty_overview/plugin/: abstract_plugin.py  calendar_config.py  duty_calendar_config.py  ical_plugin.py  ical_plugin_mixin.py  ldap_plugin_mixin.py  plugin_fetcher.py  standard_plugin.py
duty_overview/plugin/example/: example_plugin.py
duty_overview/plugin/helpers/: duty_calendar_config.py  plugin_fetcher.py
duty_overview/www/: .eslintignore  .eslintrc.json  README.md  package-lock.json  package.json  webpack.common.js  webpack.config.js  webpack.dev.js
duty_overview/www/js/: App.css  App.js  App.tsx  index.js
duty_overview/www/js/api/: api-generated-types.ts  index.ts  useGetPerson.ts  useGetSchedule.ts
duty_overview/www/js/components/: companyLogo.tsx  dynamicFAIcon.tsx  expandedCalendarInfo.tsx  footer.tsx  navbar.tsx  parsingError.tsx  parsingWarning.tsx  personComponent.tsx  personView.tsx  schedule.tsx  singleCalendar.tsx  single_calendar.tsx
duty_overview/www/js/utils/: useErrorToast.ts
duty_overview/www/src/: App.js  myApi.ts
duty_overview/www/templates/: index.html
src/: server.py  session.py  settings.py
src/models/: calendar.py  on_call_event.py  person.py
tests/: __init__.py  conftest.py  generate_fake_data.py  ical_helper.py  test_server.py  test_worker_calendars.py  test_worker_duty_officer.py  test_worker_duty_watcher.py  test_worker_loop.py
tests/alchemy/: test_api_queries.py  test_queries.py  test_update_duty_calendars.py
tests/data/openldap_ldifs/: tree.ldif
tests/models/: test_cascading_deletes.py
tests/plugin/: test_ical_plugin_mixin.py  test_ldap_plugin_mixin.py
tests/plugin/helpers/: test_ldap_helper.py  test_plugin_fetcher.py
tests/web_helpers/: test_gzip_static_files.py
