[build-system]
requires = ["setuptools >=65.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "duty-board"
authors = [{name = "Jorrick Sleijster", email = "jorricks3@gmail.com"}]
description = "Package to display an overview of all active Duty rosters you have at your Company using iCalendars."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Communications",
    "Topic :: Communications :: Conferencing",
    "Topic :: Office/Business",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",

]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "attrs >= 22.1.0",
    "fastapi >= 0.87.0",
    "ical-library >= 0.1.0",
    "pendulum >= 2.0.0",
    "psycopg2-binary >= 2.9.0",
    "pytz >= 2022.6",
    "requests >= 2.28.1",
    "sqladmin >= 0.8.0",
    "sqlalchemy >= 1.4.40, < 2.0.0",
    "tzlocal >= 4.2",
    "uvicorn >= 0.20.0"
]

[project.optional-dependencies]
doc = [
    "mkdocs >= 1.3.0, < 2.0.0",
    "mkdocs-material >= 8.3.9, < 9.0.0",
    "mkdocstrings[python] >= 0.19.0, < 1.0.0",
    "termynal >= 0.2.0, < 1.0.0",
]
dev = [
    "black >= 22.6.0, < 23.0.0",
    "flake8 >= 4.0.0, < 5.0.0",
    "isort >= 5.10.1, < 6.0.0",
    "mypy == 0.910",
    "pre-commit >= 2.19.0, < 3.0.0",
    "pytest >= 6.2.4, < 7.0.0",
    "pytest-cov >= 2.12.0, < 4.0.0",
    "pytype >= 2022.6.30",
    "types-pytz >= 2022.6.0.1",
    "types-tzlocal >= 4.2.2.0",
]
ldap = [
    "ldap3 >= 2.9.1"
]


[project.urls]
Home = "https://github.com/Jorricks/DutyBoard"
Documentation = "https://github.com/Jorricks/DutyBoard"
Source = "https://github.com/Jorricks/DutyBoard"
PullRequests = "https://github.com/Jorricks/DutyBoard/pulls"
Issues = "https://github.com/Jorricks/DutyBoard/issues"

[project.scripts]
dutyBoard = "duty_board.main:cli"

[tool.setuptools.dynamic]
version = {attr = "duty_board.__version__"}
#readme = {file = "README.md"}

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["duty_board*"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.black]
line-length=120
target-version=['py38']

[tool.isort]
line_length = 120
multi_line_output = 3
force_alphabetical_sort_within_sections = "True"
force_sort_within_sections = "False"
known_dutyboard = ["duty_board"]
sections=["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER", "DUTYBOARD"]
profile = "black"

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = "True"
scripts_are_modules = "True"

[[tool.mypy.overrides]]
module = [
    "pytz",
    "pytz.exceptions",
    "pytz.tzinfo",
    "tzlocal"
]
ignore_missing_imports = true