[build-system]
requires = ["setuptools >=65.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "duty-board"
authors = [{name = "Jorrick Sleijster", email = "jorricks3@gmail.com"}]
description = "Package to display an overview of all active Duty rosters you have at your Company using iCalendars."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Communications",
    "Topic :: Communications :: Conferencing",
    "Topic :: Office/Business",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",

]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "alembic >=1.12.1, < 2.0.0",
    "attrs >= 22.1.0",
    "fastapi >= 0.87.0",
    "ical-library >= 0.1.0",
    "itsdangerous >= 2.1.2",
    "pendulum >= 2.0.0",
    "psycopg2-binary >= 2.9.0",
    "pytz >= 2022.6",
    "requests >= 2.28.1",
    "sqladmin >= 0.8.0",
    "sqlalchemy >= 1.4.40, < 2.0.0",
    "tzlocal >= 4.2",
    "uvicorn >= 0.20.0"
]

[project.optional-dependencies]
doc = [
    "mkdocs >= 1.3.0, < 2.0.0",
    "mkdocs-material >= 8.3.9, < 9.0.0",
    "mkdocstrings[python] >= 0.19.0, < 1.0.0",
    "termynal >= 0.2.0, < 1.0.0",
]
dev = [
    "ruff >= 0.1.4, < 1.0.0",
    "mypy >= 1.6.1,<2.0.0",
    "pre-commit >= 2.19.0, < 3.0.0",
    "pytest >= 6.2.4, < 7.0.0",
    "pytest-cov >= 2.12.0, < 4.0.0",
    "pytype >= 2022.6.30",
    "types-pytz >= 2022.6.0.1",
    "types-tzlocal >= 4.2.2.0",
]
ldap = [
    "ldap3 >= 2.9.1"
]


[project.urls]
Home = "https://github.com/Jorricks/DutyBoard"
Documentation = "https://github.com/Jorricks/DutyBoard"
Source = "https://github.com/Jorricks/DutyBoard"
PullRequests = "https://github.com/Jorricks/DutyBoard/pulls"
Issues = "https://github.com/Jorricks/DutyBoard/issues"

[project.scripts]
dutyBoard = "duty_board.main:cli"

[tool.setuptools.dynamic]
version = {attr = "duty_board.__version__"}
#readme = {file = "README.md"}

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["duty_board*"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)


[tool.ruff]
fix = true
ignore = ["E501", "TRY003", "ERA001", "N812"]
line-length = 120
target-version  = "py38"
select = [
    'F',   # pyflakes
    'E',   # pycodestlyes errors
    'W',   # pycodestyles warnings
    'I',   # isort
    'N',   # PEP8-naming
    'UP',  # pyupgrade
    'S',   # flake8-bandit
    'B',   # flake8-bugbear
    'COM', # flake8-commas
    'C4',  # flake8-comprehensions
    'T10', # flake8-debugger
    'DTZ', # flake8-datetimez
    'INP', # flake8-no-pep420
    'PIE', # flake8-pie
    'T20', # flake8-print
    'PT',  # flake8-pytest
    'Q',   # flake8-quotes
    'RET', # flake8-return
    'SIM', # flake8-simplify
    'ARG', # flake8-unused-arguments
    'PTH', # flake8-use-pathlib
    'ERA', # eradicate (discuss)
    'PL',  # pylint
    'TRY', # tryceratops
    'RUF', # ruff
    'C'    # Macarbe
]

[tool.ruff.per-file-ignores]
"duty_board/alembic/**" = ["INP001"]  # Do not error about missing __init__.py
"duty_board/alchemy/add_sqladmin.py" = ["RUF012"]  # Ignore missing ClassVar annotation.
"duty_board/models/generate_fake_data.py"= ["S311", "PLR2004"]  # Allow pseudo-random & magic values
"duty_board/web_helpers/generate_typescript_api.py" = ["T201", "T203"]
"tests/*" = ["S101", "PLR2004", "T201"] # assert is allowed in test files

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["duty_board"]
section-order=["STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = "True"
scripts_are_modules = "True"

[[tool.mypy.overrides]]
module = [
    "pytz",
    "pytz.exceptions",
    "pytz.tzinfo",
    "tzlocal"
]
ignore_missing_imports = true